# LuaCrossC

CInLua/: CMakeCache.txt  CMakeLists.txt  LuaFun.cpp  Makefile  avg  avg.lua  cmake_install.cmake
CInLua/CLibInLua/: CMakeCache.txt  Makefile  cmake_install.cmake
CInLua/CLibInLua/lib/: CMakeLists.txt  printHello.cpp  printHello.h
CInLua/CLibInLua/src/: LuaPrint.lua
LuaInC/: CMakeCache.txt  CMakeLists.txt  Ctest.c  Makefile  cmake_install.cmake  copyTest.lua  ctest  data.lua  luasize.txt  readDataTest.cpp  readTest  test.lua
